# repolens-v2

./: .env.example  .gitignore  .reset_T01  .reset_T02  .reset_T03  .reset_T04  .reset_T05  .reset_T06  .reset_T07  .reset_T08  .reset_T09  .reset_T10  .reset_T11  .reset_T12  .reset_T14  .reset_T15  .reset_T17  .reset_T20  .reset_T21  .reset_T22  .roadmap_state.json  CLAUDE.md  DESIGN.md  README.md  claude.md  plan.md  pyproject.toml  spec.md  tasks.md  tasks.yaml
docs/: demo.tape  spec.md
docs/decisions/: ADR-001-summarization-strategy.md  ADR-002-default-token-budget.md  ADR-003-fastapi-mvp-scope.md  ADR-004-prompt-caching.md  ADR-005-tokenizer.md  ADR-006-model-ids.md  ADR-007-fastapi-un-defer.md  DECISION-LOG.md
logs/: CHANGELOG.md  T01.md  T02.md  T03.md  T04.md  T05.md  T06.md  T07.md  T08.md  T09.md  T10.md  T11.md  T12.md  T14.md  T15.md  T17.md  T20.md  T21.md  T22.md
repolens/: __init__.py  config.py
repolens/ai/: CLAUDE.md  __init__.py  client.py  executor.py  prompts.py
repolens/api/: __init__.py  main.py
repolens/classification/: __init__.py  classifier.py
repolens/cli/: __init__.py  main.py
repolens/context/: __init__.py  exporter.py  packager.py  token_counter.py
repolens/db/: CLAUDE.md  __init__.py  connection.py  migrations.py  repository.py  schema.py
repolens/ingestion/: __init__.py  filters.py  scanner.py
repolens/scoring/: __init__.py  scorer.py
repolens/summarization/: CLAUDE.md  __init__.py  dir_summarizer.py  file_summarizer.py  repo_summarizer.py
tasks/: tasks.yaml
tests/: CLAUDE.md  conftest.py  test_ai.py  test_api.py  test_classification.py  test_context.py  test_db.py  test_db_migrations.py  test_ingestion.py  test_scaffold.py  test_scoring.py  test_smoke_e2e.py  test_summarization.py  test_token_counter.py
tests/fixtures/sample_repo/: .gitignore
