[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "repolens"
version = "0.1.0"
description = "Ingests a local git repository, classifies files, builds token-efficient context bundles, and runs AI tasks."
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.65.0",
    "typer>=0.24.0",
    "fastapi>=0.130.0",
    "uvicorn[standard]>=0.30.0",
    "gitignore-parser>=0.1.11",
    "tiktoken>=0.8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.15.0",
    "httpx>=0.27.0",
]

[project.scripts]
repolens = "repolens.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["repolens*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests that call the real Anthropic API (skip unless ANTHROPIC_API_KEY is set)",
]
